--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar bg-dark border-bottom border-body header" data-bs-theme="dark">
   <div class="container-fluid">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <a class="navbar-brand" href="#">Gerenciador de Transferencias</a>
   </div>
 </nav>
